# conferencing-platform

./: .dockerignore  .env.local  .gitignore  :  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.work.yaml  build.sh  bump.txt  certs.sh  docker-compose.yml  env.sh  go.mod  go.work  go.work.sum  magefile.go  meson.build  nginx.templ.conf  shell.nix
client/: .env.example  index.css  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  AppLayout.tsx  PeerConnectionProvider.tsx  helpers.ts  index.css  main.tsx  variables.ts
client/src/base/: form-field.tsx  loading-dots.css  loading-dots.tsx
client/src/hooks/: useForm.ts
client/src/room/: RoomProvider.tsx
client/src/routes/r/: RoomPage.tsx
client/src/rtc/: AuthProvider.tsx  ControlsProvider.tsx  MediaStreamProvider.tsx  PublisherProvider.tsx  RoomMediaStreamListProvider.tsx  SignalProvider.tsx  SubscriberProvider.tsx
client/src/rtc/workers/: background-blur-webgl.js  faceDetector.js
client/src/utils/: debounce.ts  resize.ts
media-server/: Makefile  Makefile.local  go.mod  go.sum  meson.build  meson_options.txt
media-server/cmd/media-server/: main.go
media-server/cmd/media-server/cpppipelines/: pipelines.go  rtpvp8.go
media-server/examples/h264/: main.go
media-server/examples/offer/: README.md  main.go
media-server/examples/vp8/: main.go  main_test.go
media-server/internal/identity/: errors.go  identity_controller.go  identity_middleware.go  identity_service.go  token_service.go  utils.go
media-server/internal/ingress/: whip_controller.go
media-server/internal/mcu/: buffer.go  caps.go  element.go  mcu.go  structure.go
media-server/internal/pipeline/: cannyfilter.go
media-server/internal/room/: room_controller.go  room_service.go
media-server/internal/storage/: db.go  models.go  private_key.sql.go  refresh_token.sql.go  user.sql.go
media-server/internal/storage/queries/: private_key.sql  refresh_token.sql  user.sql
media-server/migrations/: 20240502164921_init.sql  20240502165701_private_key.sql  20240502165805_refresh_token.sql  20240502165816_user.sql
media-server/pkg/codecutils/: helpers.go
media-server/pkg/peercontext/: peercontext.go
media-server/pkg/pipelines/: pipelines.go
media-server/pkg/protocol/: peer.go  room.go
media-server/pkg/roomcontext/: roomcontext.go
media-server/pkg/rtpstats/: rtpstats.go
media-server/pkg/service/: database.go  http.go  logger.go  webrtc.go
media-server/pkg/sfu/: errors.go  loopbacktrackcontext.go  peercontext.go  peercontextpool.go  pipeline.go  sfu.go  signal.go  subscriber.event.go  subscriber.go  trackcontext.go  trackcontext.opus.go  trackcontext.vp8.go  trackcontextpool.go  transceiverpool.go
media-server/pkg/sqlutil/: sqlutil.go
media-server/pkg/variables/: media-server.go
media-server/subprojects/: gstreamer-1.0.wrap  orc.wrap
media-server/subprojects/pipelines/: meson.build  meson_options.txt
media-server/subprojects/pipelines/pipelines/: meson.build  pipelines.cpp
media-server/subprojects/pipelines/pipelines/rtpvp8/: rtpvp8.h
nix/gnostic/: default.nix
nix/protoc-gen-fetch-types/: default.nix
pkg/: go.mod  go.sum
pkg/controller/: controller.go  ingress.controller.yaml  room.controller.yaml
pkg/controller/ingress/: ingress.go
pkg/controller/room/: room.go
pkg/executils/: executils.go
pkg/protocol/: http.go
pkg/wsutils/: threadsafewriter.go
protocol/ingress/ingress/: ingress.proto
protocol/room/: room.proto
protocol/room/model/: room_model.proto
protocol/room/room/: room.proto
subprojects/: opencv.wrap
subprojects/media-server-mcu/: meson.build
subprojects/media-server-mcu/mcu/: main.cpp  main.h  meson.build
subprojects/media-server-mcu/mcu/vision/: visioncannyfilter.cpp  visioncannyfilter.h  visionframe.h
subprojects/pipelines/pipelines/: meson.build  pipelines.cpp  pipelines.h
subprojects/pipelines/pipelines/dummy/: dummyelements.h  dummytransform.cpp  dummytransform.h
subprojects/pipelines/pipelines/rtpvp8/: meson.build  rtpvp8.cpp  rtpvp8.h
subprojects/pipelines/pipelines/vision/: visioncannyfilter.cpp  visioncannyfilter.h  visionframe.cpp  visionutils.cpp  visionutils.h
